make html template utf8

--- a/template/header.html
+++ b/template/header.html
@@ -1,6 +1,8 @@
 <HTML>
   <head>
     <!--BASE-->
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="--CSS--" type="text/css" media="screen" title="no title" charset="utf-8" />
   </head>
   <body>
